# iqp-sim-independent-set

./: 1_32_dense_100runs.csv  1_32_sparse_7_100runs.csv  1_32_sparse_8_100runs.csv  1_35_sparse_5_100_new.csv  1_40_sparse_2_100runs.csv  1_50_sparse_1_100runs.csv  Project.toml  Results formating.ipynb  Untitled.ipynb
rust code/: Cargo.toml
rust code/src/: main.rs
